--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,29 @@
 
 body {
   font-family: "Inter", sans-serif;
+  position: relative;
+}
+
+.top-card {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  z-index: -10;
+}
+
+.top-card[data-theme='light'] {
+  background: var(--Blue-50-TopBGPattern);
+}
+
+.top-card[data-theme='dark'] {
+  background: var(--Gray-900-Top-BG-Pattern);
+}
+
+.container {
   padding: 1rem 2rem;
+  z-index: 100;
 }
 
 .heading {
@@ -222,6 +244,9 @@ body {
 }
 
 @media (min-width: 768px) {
+  .top-card {
+    height: 250px;
+  }
   .cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
